Fix: Header spacing and "You are not working with any workbaskets text"
https://uktrade.atlassian.net/browse/TARIFFS-657

--- a/app/assets/stylesheets/components/layout.scss
+++ b/app/assets/stylesheets/components/layout.scss
@@ -9,7 +9,7 @@ main {
 }
 
 .header-global {
-  width: 70%;
+  width: 40%;
   float: left;
 
   @media (max-width: 767px) {
